--- a/header.css
+++ b/header.css
@@ -45,13 +45,15 @@
 }
 
 @media (max-width: 800px) {
-  .header {
-    flex-direction: column;
-    gap: 40px;
-    padding: 20px;
+  .header-menu #botao {
+    display: none;
   }
-  .header a {
-    background: #f5f5f5;
-    border-radius: 4px;
+}
+
+@media (max-width: 400px) {
+  .header {
+    display: flex;
+    gap: 30px;
+    margin-bottom: 10px;
   }
 }
